Fix field spacing and device icons

--- a/public/sources/fonts/vcAttributeIcons/style.less
+++ b/public/sources/fonts/vcAttributeIcons/style.less
@@ -2,9 +2,9 @@
 
 @font-face {
   font-family: 'vcattributes';
-  src: url('@{vcattributes-font-path}/vcattributes.ttf?bkm47z') format('truetype'),
-  url('@{vcattributes-font-path}/vcattributes.woff?bkm47z') format('woff'),
-  url('@{vcattributes-font-path}/vcattributes.svg?bkm47z#vcattributes') format('svg');
+  src: url('@{vcattributes-font-path}/vcAttributes.ttf?mcypjf') format('truetype'),
+  url('@{vcattributes-font-path}/vcAttributes.woff?mcypjf') format('woff'),
+  url('@{vcattributes-font-path}/vcAttributes.svg?mcypjf#vcAttributes') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -309,5 +309,35 @@
 .vcv-ui-icon-attribute-sandwich-left {
   &:before {
     content: @vcv-ui-icon-attribute-sandwich-left;
+  }
+}
+
+.vcv-ui-icon-attribute-tablet-landscape {
+  &:before {
+    content: @vcv-ui-icon-attribute-tablet-landscape;
+  }
+}
+
+.vcv-ui-icon-attribute-mobile-portrait {
+  &:before {
+    content: @vcv-ui-icon-attribute-mobile-portrait;
+  }
+}
+
+.vcv-ui-icon-attribute-mobile-landscape {
+  &:before {
+    content: @vcv-ui-icon-attribute-mobile-landscape;
+  }
+}
+
+.vcv-ui-icon-attribute-desktop {
+  &:before {
+    content: @vcv-ui-icon-attribute-desktop;
+  }
+}
+
+.vcv-ui-icon-attribute-tablet-portrait {
+  &:before {
+    content: @vcv-ui-icon-attribute-tablet-portrait;
   }
 }
